--- a/app/css/footer.css
+++ b/app/css/footer.css
@@ -44,14 +44,39 @@
     margin-bottom: 20px;
     border-radius: 3px;
     outline: none;
-   
+    box-shadow: 4px 3px 3px rgba(0,0,0,0.6);
 }
 .form_first_group input::placeholder{
     color: rgba(25, 25, 25, 0.6);
+}
+.form_wrap_text_wrap{
+    display: flex;
+    align-items: flex-end;
+    flex-flow: column wrap; 
+
+}
+input:focus::-webkit-input-placeholder { color:transparent; }
+input:focus:-moz-placeholder { color:transparent; } /* FF 4-18 */
+input:focus::-moz-placeholder { color:transparent; } /* FF 19+ */
+input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
+
+.footer_low_wrapper{
+    display: flex;
+    justify-content: space-between;
+}
+.social_icons{
+    display: flex;
+    align-items: flex-start;
+    align-self: center;
+    margin-right: 78px;
+    width: 160px;
+    justify-content: space-around;
 }
 .form_wrap, .text_right{
     font-family: 'Helvetica neue', "Times New Roman", serif;
 }
 .text_right{
     font-size: 20px;
+    align-self:flex-end;
+    margin-left: 33px;
 }
