--- a/app/css/header.css
+++ b/app/css/header.css
@@ -6,7 +6,7 @@
     color: black;
     font-family: Vogue, "Times New Roman", sans-serif;
     font-size: 40px;
-    letter-spacing: 2.5px;
+    letter-spacing: 3px;
 }
 .logo_header h5{
     font-family: Vogue, "Times New Roman", sans-serif;
@@ -17,13 +17,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-bottom: 1.5em;
 
 }
 
 .navigation a{
     text-decoration: none;
     color: rgba(207, 160, 138, 0.9);
-    font-size: 30px;
+    font-size: 1.6em;
     letter-spacing: 1px;
 }
 .navigation ul li{
