--- a/app/css/footer.css
+++ b/app/css/footer.css
@@ -1,5 +1,5 @@
 .footer{
-    background: rgba(207, 160, 138, 0.9);
+    background: rgb(207, 160, 138);
     color: white;
 }
 .wrap_footer_head_h3, .wrap_footer_head_h5{
