--- a/app/css/header.css
+++ b/app/css/header.css
@@ -1,29 +1,40 @@
 .logo_header{
     text-align: center;
 }
-.logo_header a {
+.logo_header h2 {
     text-decoration: none;
     color: black;
-    font-family: Vogue, "Times New Roman", sans-serif;
-    font-size: 40px;
-    letter-spacing: 3px;
+    font-family: VogueHigh;
+    font-size: 45px;
+    letter-spacing: 1.5px;
+    -webkit-font-smoothing: 1px;
+    font-weight: normal;
+    text-decoration: none;
+    margin-bottom: 10px;
+    padding-top: 0px;
+}
+.logo_header  a{
+    text-decoration: none;
 }
 .logo_header h5{
-    font-family: Vogue, "Times New Roman", sans-serif;
+    font-family: Vogue;
     font-size: 20px;
-    letter-spacing: 1.2px;
+    letter-spacing: 2px;
+    margin-bottom: 10px;
+
+   
 }
 .navigation{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-bottom: 1.5em;
+    padding-bottom: 1em;
 
 }
 
 .navigation a{
     text-decoration: none;
-    color: rgba(207, 160, 138, 0.9);
+    color: rgb(207, 160, 138);
     font-size: 1.6em;
     letter-spacing: 1px;
 }
