--- a/app/css/footer.css
+++ b/app/css/footer.css
@@ -64,7 +64,7 @@ input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
 .footer_low_wrapper{
     display: flex;
     justify-content: space-between;
-    /* margin-top: 4%; */
+    margin-top: 2%;
 }
 .social_icons{
     display: flex;
