--- a/app/css/footer.css
+++ b/app/css/footer.css
@@ -20,19 +20,21 @@
 }
 .form_wrap{
     display: flex;
-    width: 100vw;
-    justify-content: center;
+    /* width: 100vw; */
+    justify-content: space-around;
 }
-.form_wrap form{
+form{
     display: flex;
+    justify-content: space-around;
+    width: 100vw;
 }
 .form_first_group{
-    width: 45vh;
+    width: 50vh;
     display: flex;
     flex-flow: column nowrap;
-    margin-right: 40px;
     height: 35vh;
     align-items: space-around;
+    margin-left: 10%;
 }
 .form_first_group input{
     margin-bottom: 26px;
@@ -55,6 +57,7 @@
     padding-bottom: 15px;
     font-size: 19px;
     outline: none;   
+    width: 180%;
 }
 input:focus::-webkit-input-placeholder { color:transparent; }
 input:focus:-moz-placeholder { color:transparent; } /* FF 4-18 */
