--- a/app/css/header.css
+++ b/app/css/header.css
@@ -4,21 +4,22 @@
 .logo_header h2 {
     text-decoration: none;
     color: black;
-    font-family: VogueHigh;
-    font-size: 45px;
+    font-family: Vogue;
+    font-size: 40px;
     letter-spacing: 1.5px;
     -webkit-font-smoothing: 1px;
     font-weight: normal;
     text-decoration: none;
     margin-bottom: 10px;
     padding-top: 0px;
+    margin-top: 15px;
 }
 .logo_header  a{
     text-decoration: none;
 }
 .logo_header h5{
     font-family: Vogue;
-    font-size: 20px;
+    font-size: 15px;
     letter-spacing: 2px;
     margin-bottom: 10px;
 
@@ -37,6 +38,12 @@
     color: rgb(207, 160, 138);
     font-size: 1.6em;
     letter-spacing: 1px;
+    
+}
+.navigation a:hover{
+    color: rgb(48, 38, 33);
+    /* text-decoration: underline; */
+    transition: 0.5s all;
 }
 .navigation ul li{
     list-style-type: none;
