--- a/app/css/block.css
+++ b/app/css/block.css
@@ -1,22 +1,23 @@
 .wrapper_intro{
-    background: #CFA08A;
-    color: rgba(255, 255, 255, 1);
-    font-size: 23px;
+    background: rgba(216, 212, 212, 0.774);
+    color: rgb(0, 0, 0);
+    font-size: 19px;
     justify-content: center;
     align-items: center;
     display: flex;
     flex-direction: column;
     text-align: center;
-    /* padding-bottom: 22px;
-    padding-top: 30px; */
+
     height: 77vh;
 }
 .wrapper_intro__text{
     width: 90vw;
+    font-family: 'PT Serif', serif;
+
 }
 .wrapper_intro img{
     width: 70%;
-    height: auto;
+    height: 70%;
     
 }
 .wrapper_about_me{
@@ -39,7 +40,7 @@
     padding-top: 3%;
     width: 40vw;
     font-size: 19px;
-    font-family: 'Helvectica neue', 'Times New Roman', sans-serif;
+    font-family: 'PT Serif', serif; 
     letter-spacing: 0.3px;
     line-height: 30px;
 }
@@ -48,13 +49,11 @@
     color:rgb(207, 160, 138, 0.9);
     text-align: center;
     letter-spacing: 1.2px;
-    font-family: Vogue, "Times New Roman", sans-serif;
+    font-family: 'Playfair Display', serif;
     padding-bottom: 60px;
+    font-size: 30px;
 }
-.wrapper_reasons_to_me{
-    font-family: "Helvectica neue", "Times New Roman", sans-serif;
-    font-size: 22px;
-}
+
 .wrapper_reasons_to_me_wrap{
     display: flex;
     justify-content: space-around;
@@ -82,6 +81,10 @@
     text-align: center;
     padding-left: 70px;
     padding-right: 70px;
+    font-family: 'PT Serif', serif; 
+    font-size: 19px;
+    line-height: 1.5;
+
 }
 .wrapper_reasons_to_me_text p{
     width: 25vw;
