--- a/app/css/footer.css
+++ b/app/css/footer.css
@@ -3,24 +3,26 @@
     color: white;
 }
 .wrap_footer_head_h3, .wrap_footer_head_h5{
-    font-family: 'Vogue', 'Arial', sans-serif;
+    font-family: 'Playfair Display', serif;
     text-align: center;
 }
 .wrap_footer_head_h3{
-    font-size: 40px;
+    
+    font-size: 2em;
     letter-spacing: 1.3px;
     padding-top: 50px;
     margin-bottom: 0px;
     margin-top: 0px;
 }
 .wrap_footer_head_h5{
-    font-size: 27px;
+    font-size: 1.3em;
     margin-top: 37px;
     letter-spacing: 0.9px;
+    font-family: "Geometrica", sans-serif;
+    letter-spacing: 1.4px;
 }
 .form_wrap{
     display: flex;
-    /* width: 100vw; */
     justify-content: space-around;
 }
 form{
@@ -78,11 +80,10 @@ input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
     justify-content: space-around;
 }
 .form_wrap, .text_right{
-    font-family: 'Helvetica neue', "Times New Roman", serif;
+    font-family: 'PT serif', sans-serif;
 }
 .text_right{
     font-size: 18px;
     align-self:flex-end;
     margin-left: 33px;
-    font-family: "Helvectica neue", Arial, sens-serif;
 }
