--- a/app/css/header.css
+++ b/app/css/header.css
@@ -29,7 +29,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-bottom: 1em;
+    /* padding-bottom: 1em; */
 
 }
 
