--- a/app/css/block.css
+++ b/app/css/block.css
@@ -188,6 +188,61 @@
     font-weight:200;
 }
 
+/* здесь начинаются полезные материалы */
+.depression_wrapper{
+    margin-top: 35px;
+    margin-bottom: 5em;
+}
+.anxious_wrapper{
+    background-color: #F7F7F7;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+.anxious_wrapper, .depression_wrapper, .wrapper_panic{
+    padding-left:7%;
+    padding-right:7%;
+    /* justify-content: center; */
+    /* display: flex; */
+}
+.wrapper_symptoms_depression{
+    margin-bottom: 50px;
+}
+.wrapper_panic {
+    padding-bottom: 55px;
+}
+.anxious_wrapper img, .depression_wrapper img, .wrapper_panic img{
+    width:80%;
+    height: auto;
+}
+.wrapper_symptoms_anxious, .wrapper_sympotms_panic, .wrapper_symptoms_depression{
+    display: flex;
+    align-items:flex-end;
+    justify-content: space-between;
+}
+.wrapper_symptoms_anxious p, .wrapper_sympotms_panic p, .wrapper_symptoms_depression p{
+    /* padding-top: 3%; */
+    /* width: 40vw; */
+    font-size: 19px;
+    font-family: 'PT Serif', serif; 
+    letter-spacing: 0.3px;
+    line-height: 20px;
+}
+.first_head{
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+.second_head{
+    text-align: center;
+    margin-bottom: 20px !important;
+    margin-top: 20px !important;
+}
+
+
+
+
+
+
+
 
 
 
