--- a/app/css/block.css
+++ b/app/css/block.css
@@ -89,6 +89,88 @@
 
 }
 
+/* страница о себе */
+.wrapper_about_me_first{
+    display: flex;
+    flex-direction: column;
+    padding-left: 7%;
+    padding-right: 7%;
+}
+.wrapper_about_me__h2{
+    /* padding-top: 35px; */
+    text-align: center;
+    letter-spacing: 1.2px;
+    font-family: 'Playfair Display', serif;
+    /* padding-bottom: 60px; */
+    font-size: 30px;
+}
+.academic_information{
+    display: flex;
+    padding-left: 7%;
+    padding-right: 7%;
+    padding-bottom: 45px;
+    padding-top: 30px;
+    align-items: flex-start;
+}
+.academic_infromation_second_column{
+    margin-top: 2em;
+}
+.academic_information_first_column{
+    display: flex;
+    flex-direction:column;
+    margin-right: 5em;
+    text-align: center;
+}
+.academic__h6{
+    letter-spacing: 1.2px;
+    font-family: 'Playfair Display', serif;
+    font-size: 18px;
+    color:#2b30a3;
+    margin-top:7px;
+    margin-bottom: 7px;
+    font-weight: 700;
+}
+
+.h6_first{
+    margin-top: 1em;
+   margin-bottom: 1em;
+}
+
+hr{
+    width: 80%;
+    text-align: left;
+    color:#2b30a3;
+    height: 2px;
+}
+.academic__img img{
+    width: 70%;
+    height: auto;
+}
+.academic__img {
+    padding-bottom: 20px;
+}
+.academic__img:first-child{
+    padding-top: 20px;
+}
+.academic_span{
+    font-weight: bold;
+}
+.academic__p{
+    padding: 0px;
+    margin: 0px;
+    font-size: 17px;
+    font-family: 'PT Serif', serif; 
+    line-height: 42px;
+    letter-spacing: 0.6px;
+    -webkit-font-smoothing:subpixel;
+}
+
+
+
+
+
+
+
 /* страница про психотерапию */
 .psy_in_our_life__h3{
     font-family: 'Playfair Display', serif;
