--- a/app/css/block.css
+++ b/app/css/block.css
@@ -7,7 +7,6 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-
     height: 77vh;
 }
 .wrapper_intro__text{
@@ -50,6 +49,10 @@
     font-family: 'Playfair Display', serif;
     padding-bottom: 60px;
     font-size: 30px;
+    font-weight: 100;
+    letter-spacing: 0.9px;
+    -webkit-font-smoothing: 1px;
+
 }
 
 .wrapper_reasons_to_me_wrap{
@@ -198,13 +201,15 @@ hr{
     margin-bottom: 5em;
 }
 .psy_in_our_life__p{
-    font-size: 19px;
+    
+    font-size: 20px;
     font-family: 'PT Serif', serif; 
-    line-height: 28px;
-    letter-spacing: 0.6px;
-    -webkit-font-smoothing:subpixel;
-    margin-bottom: 2px;
-    margin-top: 9px;
+    line-height: 27px;
+    /* letter-spacing: 0.8px; */
+    -webkit-font-smoothing:auto;
+    -moz-font-smoothing:auto;
+    /* margin-bottom: 5px; */
+    margin-top: 15px;
 }
 
 .psy_third_wrapper{
@@ -285,7 +290,7 @@ hr{
     padding-bottom: 25px;
 }
 .anxious_wrapper, .depression_wrapper, .wrapper_panic{
-    padding-left:7%;
+    padding-left:12%;
     padding-right:7%;
     /* justify-content: center; */
     /* display: flex; */
