some unimportantn changes

--- a/app/css/block.css
+++ b/app/css/block.css
@@ -89,7 +89,6 @@
 }
 .wrapper_reasons_to_me_text p{
     width: 25vw;
-
 }
 
 /* страница о себе */
@@ -286,28 +285,31 @@ hr{
 .method_first__list{
     display: flex;
     flex-direction: column;
-    list-style:none;
+    list-style:decimal;
     font-family: 'PT Serif', serif; 
     font-size: 19px;
     line-height: 1.5;
     justify-content: space-around;
     height: 200px;   
-}
+    margin-top: 2em;
 
+}
+/* 
 .method_second__list span{
     margin-left: 1em;
-}    
+}     */
 
 
 
 
-.method_first__list li:before{
-    content:  "—";
-    position: relative;
-    left:     -5px;
-}
+    .method_first__list li:before{
+        content:  "—";
+        position: relative;
+        left:     -5px;
+    }
 
 .method_second__list{
+  
     list-style:none;
     display: flex;
     flex-direction: column;
@@ -317,12 +319,13 @@ hr{
     line-height: 1.5;
     height: 200px;
     flex-wrap: nowrap;
+    margin-top: 5em;
 }
-.method_second__list li:before{
+/* .method_second__list li:before{
     content:  "—";
     position: relative;
     left:     -5px;
-}
+} */
 
 
 
