--- a/app/css/main.css
+++ b/app/css/main.css
@@ -6,6 +6,9 @@ textarea, input {
       font-weight: normal;
       text-decoration: inherit;
   }
+  html {
+    scroll-behavior: smooth;
+  }
 
 
   @font-face{
