--- a/app/css/header.css
+++ b/app/css/header.css
@@ -50,7 +50,7 @@
 .navigation ul li{
     list-style-type: none;
 }
-ul{
+.navigation ul{
     display: flex;
     width: 85vw;
     justify-content: space-around;
@@ -69,6 +69,9 @@ ul{
 }
 .second_nav ul{
     width: 70%;
+    display: flex;
+    width: 85vw;
+    justify-content: space-around;
 }
 .second_nav li{
     list-style-type:none;
