--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,10 +1,13 @@
 @import "adaptive.css";
-@import "block.css";
+/* @import "block.css";/ */
 @import "button.css";
 @import "footer.css";
 @import "header.css";
 @import "norma.css";
 @import "main.css";
 @import "reserve.css";
-
-
+@import "contacts.css";
+@import "materials.css";
+@import "method.css";
+@import "psychotherapy.css";
+@import "about.css";
