--- a/app/css/footer.css
+++ b/app/css/footer.css
@@ -47,7 +47,7 @@ form{
     box-shadow: 4px 3px 3px rgba(0,0,0,0.6);
     font-size: 16px;
     border:1px solid rgba(112, 112, 112, alpha);
-    padding: 12px;
+    padding: 13px 12px;
 }
 .form_first_group input::placeholder{
     color: rgba(25, 25, 25, 0.6);
