--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,4 +1,5 @@
 @import "adaptive.css";
+@import "index.css";
 /* @import "block.css";/ */
 @import "button.css";
 @import "footer.css";
@@ -11,3 +12,4 @@
 @import "method.css";
 @import "psychotherapy.css";
 @import "about.css";
+@import "mag.css"
