--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,4 +1,4 @@
-@import "adaptive.css";
+
 @import "index.css";
 /* @import "block.css";/ */
 @import "button.css";
@@ -12,4 +12,5 @@
 @import "method.css";
 @import "psychotherapy.css";
 @import "about.css";
-@import "mag.css"
+@import "mag.css";
+@import "adaptive.css";
