--- a/alter_app/css/footer.css
+++ b/alter_app/css/footer.css
@@ -6,21 +6,30 @@ footer{
     background-color: hsl(204, 86%, 53%);
     margin-top: 2.5em;
 }
+.wrap_footer_head_h5{
+    padding-top: 20px;
+    font-weight: 500;
+}
+.wrap_footer_head_h3{
+    font-family: "Playfair Display", serif;
+}
 .wrap_footer_head {
-    padding-top: 2em;
+    padding-top: 3em;
     padding-bottom: 2em;
 }
 .button{
     margin-top: 15px;
 }
 .input_first{
-    padding-bottom: 2.47em;
+    padding-bottom: 2.2em;
 }
 .footer_low_wrapper {
     margin-top: 2.5em;
 }
 .text_right{
     margin-left: 0.3em;
+    color: #000;
+    font-weight: 200px;
 }
 .social_icons {
     justify-content: space-around;
