--- a/alter_app/css/responsive.css
+++ b/alter_app/css/responsive.css
@@ -1,11 +1,28 @@
-@media  screen and  (max-width: 1080px){
-    .wrapper_nav{
+@media screen and (max-width: 1080px) {
+    .wrapper_nav {
         display: block;
     }
     .wrapper_about_me__ava {
-        width:100%;
+        width: 100%;
     }
     .wrapper_about_me {
         padding: 2em 1em;
+    }
+}
+
+/* Здесь я попробую написать для больших экранов */
+
+@media screen and (min-width: 1620px) {
+    .wrapper_about_me__text p{
+        font-size: 21px;
+    }
+    .wrapper_about_me {
+        padding: 5em 10em;
+    }
+    .wrapper_reasons_to_me{
+        font-size: 20px;
+    }
+    input,textarea{
+
     }
 }
