--- a/alter_app/css/index.css
+++ b/alter_app/css/index.css
@@ -84,8 +84,8 @@
 }
 
 .wrapper_reasons_to_me {
-    margin: 0em 2em 0 2em;
-    padding: 1em 2em 1em 2em;
+    margin: 0em 2em;
+    padding: 1em 2em;
 }
 
 .wrapper_reasons_to_me_text {
