--- a/alter_app/css/method.css
+++ b/alter_app/css/method.css
@@ -25,13 +25,14 @@
     background-repeat: no-repeat;
 }
 
-ul li{
+.method_wrapper_first, .method_wrapper_third, .method_wrapper_fourth,.wrapper_method_fifth ul li{
     list-style-image: url("../img/line.png")
 }
-ul{
+
+/* .method_wrapper_first, .method_wrapper_third, .method_wrapper_fourth,.wrapper_method_fifth ul{
  padding-left: 20px;
 
 }
 .wrapper_method_fifth {
     padding-bottom: 5em;
-}
+} */
